--- a/assets/css/style_index.css
+++ b/assets/css/style_index.css
@@ -34,6 +34,12 @@
      margin-left: 5px;
 }
 
+@media only screen and (max-width: 576px) {
+     .container {
+          width: 97%;
+     }
+}
+
 #bottom {
      height: 35px;
 }
