--- a/assets/css/style_portfolio.css
+++ b/assets/css/style_portfolio.css
@@ -35,9 +35,6 @@
      background-color: rgba(0, 174, 197, 0.109);
 }
 
-.space {
-     margin: 20px 8px;
-}
 
 .card-body-btm {
      padding: 10px;
@@ -61,8 +58,14 @@
 .container {
      margin-top: 20px;
      margin-left: 5px;
-     margin-right: 20px;
+     /* margin-right: 20px; */
      width: 100%;
+}
+
+@media only screen and (max-width: 576px) {
+     .container {
+          width: 97%;
+     }
 }
 
 #bottom {
